# pyuangs

./: .gitignore  GOVERNANCE_INVARIANTS.md  LICENSE  README.md  README_EN.md  README_ZH.md  SPECIFICATION.md  USER_GUIDE.md  agent.policy.yaml  pyproject.toml  value_manifesto.yaml
.github/workflows/: workflow.yml
tests/: test_diff_parser.py
trusted_agent_engine/: __init__.py
trusted_agent_engine/api/: server.py
trusted_agent_engine/cli/: main.py
trusted_agent_engine/engine/: anomaly_detector.py  asset_manager.py  consensus.py  context_bank.py  diff_parser.py  evaluator.py  liability_manager.py  policy_loader.py  safe_evaluator.py  self_audit.py  sovereign.py  types.py
